fixing navbar to be collapsable onClick

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -21,6 +21,5 @@
   text-decoration: none;
 }
 .footer-link:hover {
-  color: white;
-  font-weight: bold;
+  color: #14e956;
 }
